<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_card" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/label_time"
                android:text="@string/time_1"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorScore"
                android:text="@string/score"
                android:textSize="@dimen/label_score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:text="@string/um_ponto"
                android:onClick="addOneForTeamA" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:onClick="addThreeForTeamA"
                android:text="@string/tres_pontos" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:onClick="addSixForTeamA"
                android:text="@string/seis_pontos" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:onClick="addNineForTeamA"
                android:text="@string/nove_pontos" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/time_2"
                android:textSize="@dimen/label_time" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorScore"
                android:text="@string/score"
                android:textSize="@dimen/label_score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:text="@string/um_ponto"
                android:onClick="addOneForTeamB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:text="@string/tres_pontos"
                android:onClick="addThreeForTeamB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:text="@string/seis_pontos"
                android:onClick="addSixForTeamB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_button"
                android:layout_marginLeft="@dimen/margin_left_button"
                android:layout_marginRight="@dimen/margin_right_button"
                android:textSize="@dimen/label_button"
                android:text="@string/nove_pontos"
                android:onClick="addNineForTeamB" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/label_button"
        android:text="@string/novo_jogo"
        android:onClick="resetScore" />

</RelativeLayout>